# sobel-filter_c

./: .gitignore  CMakeLists.txt  README.md  README.txt  build.sh  performance_full.sh  performance_noext.sh
headers/: image.h  jpeg.h  pgm.h  thread_auto.h
src/: fltr_sobel.c  fltr_sobel_test.c  jpeg.c  pgm.c  thread_auto.c
